class AppTexts {
  // 🧭 General
  static const appTitle = 'Technical Test Project';
  static const loading = 'Cargando...';
  static const retry = 'Reintentar';
  static const save = 'Guardar';
  static const cancel = 'Cancelar';
  static const delete = 'Eliminar';
  static const edit = 'Editar';

  // Users
  static const usersTitle = 'Usuarios';
  static const noUsersTitle = 'Sin usuarios';
  static const noUsersMessage = 'Agrega un usuario para comenzar';
  static const addUser = 'Agregar usuario';
  static const editUser = 'Editar usuario';
  static const userDetails = 'Detalles del usuario';
  static const userName = 'Nombre';
  static const userEmail = 'Correo electrónico';
  static const userAddress = 'Dirección';
  static const userCountry = 'País';
  static const userState = 'Estado o Departamento';
  static const userCity = 'Ciudad';

  // 💾 Mensajes de éxito o error
  static const userSaved = 'Usuario guardado exitosamente';
  static const userDeleted = 'Usuario eliminado correctamente';
  static const userUpdated = 'Usuario actualizado correctamente';
  static const errorGeneric = 'Ocurrió un error inesperado';
  static const errorInvalidForm =
      'Por favor completa todos los campos correctamente';

  // 🌍 Direcciones
  static const addressTitle = 'Direcciones';
  static const addAddress = 'Agregar dirección';
  static const noAddressTitle = 'Sin direcciones';
  static const noAddressMessage = 'Agrega una dirección para este usuario';
}
