...
          // Recargar el detalle del usuario después de actualizar
          context.read<UserBloc>().add(GetUserByIdEvent(_currentUser!.id));
        }
      },
      child: Scaffold(
        appBar: AppBar(
          title: Text(widget.isEditing ? 'Editar usuario' : 'Nuevo usuario'),
        ),
        body: widget.isEditing && !_isInitialized
            ? BlocBuilder<UserBloc, UserState>(
                builder: (context, state) {
                  // Solo si estamos editando y NO se pasó usuario, intentar desde el bloc
                  if (widget.user == null && state is UserDetailLoaded) {
...
